--- a/C# OOP/08ReflectionAndAttributes/Stealer/Stealer.csproj
+++ b/C# OOP/08ReflectionAndAttributes/Stealer/Stealer.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <!--TargetFramework>net5.0</TargetFramework-->
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <!--TargetFramework>netcoreapp2.1</TargetFramework-->
   </PropertyGroup>
 
 </Project>
