--- a/C# OOP/09UnitTesting/Exercise/Database.Tests/Database.Tests.csproj
+++ b/C# OOP/09UnitTesting/Exercise/Database.Tests/Database.Tests.csproj
@@ -4,8 +4,6 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
-
-    <RootNamespace />
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Skeleton\Skeleton.csproj" />
+    <ProjectReference Include="..\Database\Database.csproj" />
   </ItemGroup>
 
 </Project>
