--- a/C# OOP/09UnitTesting/Exercise/FightingArena.Tests/FightingArena.Tests.csproj
+++ b/C# OOP/09UnitTesting/Exercise/FightingArena.Tests/FightingArena.Tests.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FightingArena\FightingArena.csproj" />
+  </ItemGroup>
 </Project>
