--- a/C# EF Core/01.AdoNet-Exercise/.vscode/launch.json
+++ b/C# EF Core/01.AdoNet-Exercise/.vscode/launch.json
@@ -10,11 +10,11 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/AdoNet.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/AdoNet.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "internalConsole",
+            "console":"integratedTerminal",
             "stopAtEntry": false
         },
         {
