--- a/C# EF Core/MiniORM/MiniORM.csproj
+++ b/C# EF Core/MiniORM/MiniORM.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Library</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
+    <!--PackageReference Include="JetBrains.Annotations" Version="10.2.1" / -->
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
