--- a/C# EF Core/13.CodeFirstExercise/P01_HospitalDatabase/P01_HospitalDatabase.csproj
+++ b/C# EF Core/13.CodeFirstExercise/P01_HospitalDatabase/P01_HospitalDatabase.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
