--- a/C# EF Core/12.Linq/12.Linq.csproj
+++ b/C# EF Core/12.Linq/12.Linq.csproj
@@ -11,8 +11,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="6.14.2" />
   </ItemGroup>
 
 </Project>
