--- a/C# EF Core/14.AdvancedQuerying-Exercise/BookShop/BookShop/BookShop.csproj
+++ b/C# EF Core/14.AdvancedQuerying-Exercise/BookShop/BookShop/BookShop.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.1" />
   </ItemGroup>
 
 </Project>
