--- a/C# Web Basics/SIS/DemoApp/DemoApp.csproj
+++ b/C# Web Basics/SIS/DemoApp/DemoApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SIS.MvcFramework\SIS.MvcFramework.csproj" />
+    <ProjectReference Include="..\SIS.Http\SIS.Http.csproj" />
   </ItemGroup>
 
 </Project>
