--- a/C# Web Basics/SIS/DemoApp/DemoApp.csproj
+++ b/C# Web Basics/SIS/DemoApp/DemoApp.csproj
@@ -12,4 +12,12 @@
     <ProjectReference Include="..\SIS.Http\SIS.Http.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
+  </ItemGroup>
+
 </Project>
