--- a/C# Web Basics/SIS/SulsApp/SulsApp.csproj
+++ b/C# Web Basics/SIS/SulsApp/SulsApp.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <ProjectReference Include="..\SIS.MvcFramework\SIS.MvcFramework.csproj" />
     <ProjectReference Include="..\SIS.Http\SIS.Http.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
