--- a/C# Web Basics/SIS/SIS.MvcFramework/SIS.MvcFramework.csproj
+++ b/C# Web Basics/SIS/SIS.MvcFramework/SIS.MvcFramework.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\SIS.Http\SIS.Http.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
