--- a/C# Web Basics/Web/SulsApp/SulsApp.csproj
+++ b/C# Web Basics/Web/SulsApp/SulsApp.csproj
@@ -11,9 +11,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   
-  <ItemGroup Condition="'$(RuntimeIdentifier)' == 'win-x86'  Or '$(RuntimeIdentifier)' == 'win-x64'">
-    <None Update="wwwroot\favicon.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  <ItemGroup>
+	<None Update="wwwroot\favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
