--- a/ASP.NET/Eventures/Eventures/appsettings.json
+++ b/ASP.NET/Eventures/Eventures/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Eventures;User Id=AspNet;Password=123456;Encrypt=False;MultipleActiveResultSets=true",
+    "EventuresDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Eventures;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
