--- a/ASP.NET/Eventures/Eventures/Eventures.csproj
+++ b/ASP.NET/Eventures/Eventures/Eventures.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <Folder Include="Data\Migrations\" />
     <Folder Include="Models\ViewModels\" />
   </ItemGroup>
 
