--- a/ASP.NET/WebApiMessages/appsettings.json
+++ b/ASP.NET/WebApiMessages/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MessagesDb": "Server=.;Database=Messages;User Id=AspNet;Password=123456;Encrypt=False;MultipleActiveResultSets=true"
+    "MessagesDb": "Server=.\\SQLEXPRESS;Database=Messages;User Id=AspNet;Password=123456;Encrypt=False;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
